<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ifondo"
    tools:context=".Crear_cta">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="176dp"
        android:textColor="@color/colorTexto"
        android:gravity="center"
        android:text="Introduzca Email y Password"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_usuario2"
        android:layout_width="457dp"
        android:layout_height="73dp"
        android:layout_marginStart="521dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="544dp"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:textColorHint="@color/colorTexto"
        android:backgroundTint="@color/colorTexto"
        android:ems="10"
        android:hint="@string/Act_crear_cat_txt_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_password2"
        android:layout_width="457dp"
        android:layout_height="73dp"
        android:layout_marginStart="517dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="548dp"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:textColorHint="@color/colorTexto"
        android:backgroundTint="@color/colorTexto"
        android:ems="10"
        android:hint="@string/Act_crear_cat_txt_passwor"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_usuario2" />

    <Button
        android:id="@+id/btn_entrar2"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginStart="556dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="617dp"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:background="@drawable/styles_border"
        android:text="@string/Act_crear_cat_btn_regist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password2" />

    <Button
        android:id="@+id/btn_inicio_sesion"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginStart="593dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="599dp"
        android:gravity="center"
        android:textColor="@color/colorTexto"
        android:background="@drawable/styles_border"
        android:text="@string/Act_recupera_inicia_secion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar2" />

</androidx.constraintlayout.widget.ConstraintLayout>